<resources>
    <string name="app_name">Standard Calendar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event_list">EventListActivity</string>

    <string name="save_event">Save</string>
    <string name="cancel_event_creation">Cancel</string>
    <string name="enter_event_name_hint">Enter name</string>
    <string name="enter_event_description_hint">description</string>
    <string name="event_creation_date">Date:</string>
    <string name="event_creation_start">Start:</string>
    <string name="event_creation_end">End:</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>Sol</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="event_year_hint">Year</string>
    <string name="event_day_hint">Day</string>
    <string name="event_full_day">Full day?</string>
    <string name="year_day">Year Day</string>
    <string name="leap_day">Leap Day</string>
    <string name="event_saved">Event saved!</string>
    <string name="delete">Delete</string>
    <string name="event_updated">Event updated!</string>
    <string name="event_deleted">Event deleted!</string>
    <string name="today_date_is">The date is</string>
    <string name="on_gregorian_calendar">on the Gregorian calendar that\'s</string>
    <string name="events_planned">Events that are planned on this date:</string>
    <string name="today_holidays">Today\'s holidays:</string>
    <string name="jump_to_date">Jump to a date!</string>
    <string name="go">Go!</string>
    <string name="jump_to_today">Jump to today</string>
    <string name="are_you_sure">Are you sure you want to delete this event?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
</resources>
